Fixed IE7 spacing bug

--- a/style/basic.css
+++ b/style/basic.css
@@ -357,6 +357,7 @@ form.webform > h1, form.webform > div, form.webform > fieldset, form.webform > p
 form.webform .content-full > *
 {
     width: auto;
+    zoom: 1;
 }
 
 form.webform .inner-form
